--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
       <ul class="nav">
         <li><a href="#home" class="active"><i class="fa fa-home"></i> Home</a></li>
         <li><a href="#about"><i class="fa fa-user"></i> About</a></li>
+        <li><a href="#Skills"><i class="fa fa-user"></i> Skills</a></li>
         <li><a href="#service"><i class="fa fa-list"></i> Services</a></li>
         <li><a href="#portfolio"><i class="fa fa-briefcase"></i> Portfolio</a></li>
         <li><a href="#contact"><i class="fa fa-comments"></i> Contact</a></li>
@@ -48,6 +49,7 @@
 
   </div>
   <!-- ===== Aside End ===== -->
+  <!-- ===== Main Container End ===== -->
 
   <!-- ===== Main Content Start ===== -->
   <div class="main-content">
@@ -58,7 +60,7 @@
           <div class="home-info padd-15">
             <h3 class="hello">Hello, my name is <span class="name">Muhammad Dastgeer </span></h3>
             <h3 class="my-profession">I'm a <span class="typing">web designer</span></h3>
-            <p>I'm a web Designer with extensive experience for over 10 years. My expertise is to create and website
+            <p>I'm a web Designer with extensive experience for over 3 Month. My expertise is to create and website
               design, graphic design, and many more...</p>
 
 
@@ -67,14 +69,14 @@
                 <a href="https://web.facebook.com/m.dastgeer.79/"><i class="fa-brands fa-facebook"></i></a>
                 <!-- <a href="#"><i class="fa-brands fa-twitter"></i></a> -->
                 <a href="https://www.instagram.com/m.dastgeer.79/"><i class="fa-brands fa-instagram"></i></a>
-                <a href="#"><i class="fa-brands fa-github"></i></a>
+                <a href="https://github.com/MuhammadDastgeer"><i class="fa-brands fa-github"></i></a>
               </ul>
             </div>
 
             <a href="#contact" class="btn hire-me">Hire Me</a>
           </div>
           <div class="home-img padd-15">
-            <img src="images/hero.jpg" alt="">
+            <img src="images/1.png" alt="">
           </div>
         </div>
       </div>
@@ -90,6 +92,7 @@
             <h2>About Me</h2>
           </div>
         </div>
+
         <div class="row">
           <div class="about-content padd-15">
             <div class="row">
@@ -103,6 +106,7 @@
                   necessitatibus obcaecati minima dignissimos.</p>
               </div>
             </div>
+            <!-- ===== Information Content Start ==== -->
             <div class="row">
               <div class="personal-info padd-15">
                 <div class="row">
@@ -138,42 +142,87 @@
                   </div>
                 </div>
               </div>
-
-              <div class="skills padd-15">
-                <div class="row">
-                  <div class="skill-item padd-15">
-                    <h5>CSS</h5>
-                    <div class="progress">
-                      <div class="progress-in" style="width: 76%;"></div>
-                      <div class="skill-percent">76%</div>
-                    </div>
-                  </div>
-                  <div class="skill-item padd-15">
-                    <h5>CSS</h5>
-                    <div class="progress">
-                      <div class="progress-in" style="width: 96%;"></div>
-                      <div class="skill-percent">76%</div>
-                    </div>
-                  </div>
-                  <div class="skill-item padd-15">
-                    <h5>CSS</h5>
-                    <div class="progress">
-                      <div class="progress-in" style="width: 76%;"></div>
-                      <div class="skill-percent">76%</div>
-                    </div>
-                  </div>
-                  <div class="skill-item padd-15">
-                    <h5>CSS</h5>
-                    <div class="progress">
-                      <div class="progress-in" style="width: 76%;"></div>
-                      <div class="skill-percent">76%</div>
-                    </div>
-                  </div>
-                </div>
-              </div>
+              <!-- ===== Information Content End ==== -->
             </div>
 
+          </div>
+        </div>
+    </section>
+    <!-- ===== Language Content Start ==== -->
+    <section class="about section active" id="Skills">
+      <div class="container">
+        <div class="row">
+          <div class="section-title padd-15">
+            <h2>Coding Skills</h2>
+          </div>
+        </div>
 
+        <div class="row">
+          <div class="about-content padd-15">
+
+            <div class="skills padd-15">
+              <div class="row">
+                <div class="skill-item padd-15">
+                  <h5> <i class="fa-brands fa-html5"></i> &ensp; HTML</h5>
+                  <div class="progress">
+                    <div class="progress-in" style="width: 85%;"></div>
+                    <div class="skill-percent">85%</div>
+                  </div>
+                </div>
+
+                <div class="skill-item padd-15">
+                  <h5> <i class="fa-brands fa-css3-alt"></i> &ensp;CSS</h5>
+                  <div class="progress">
+                    <div class="progress-in" style="width: 85%;"></div>
+                    <div class="skill-percent">85%</div>
+                  </div>
+                </div>
+
+                <div class="skill-item padd-15">
+                  <h5><i class="fa-brands fa-js"></i> &ensp;JAVASCRIPT</h5>
+                  <div class="progress">
+                    <div class="progress-in" style="width: 76%;"></div>
+                    <div class="skill-percent">75%</div>
+                  </div>
+                </div>
+
+                <div class="skill-item padd-15">
+                  <h5><i class="fa-brands fa-php"></i> &ensp;PHP</h5>
+                  <div class="progress">
+                    <div class="progress-in" style="width: 65%;"></div>
+                    <div class="skill-percent">65%</div>
+                  </div>
+                </div>
+
+                <div class="skill-item padd-15">
+                  <h5><i class="fa-brands fa-python"></i> &ensp;PYTHON</h5>
+                  <div class="progress">
+                    <div class="progress-in" style="width: 55%;"></div>
+                    <div class="skill-percent">55%</div>
+                  </div>
+                </div>
+
+                <div class="skill-item padd-15">
+                  <h5><i class="fa-brands fa-react"></i> &ensp;REACT</h5>
+                  <div class="progress">
+                    <div class="progress-in" style="width: 65%;"></div>
+                    <div class="skill-percent">65%</div>
+                  </div>
+                </div>
+
+                <div class="skill-item padd-15">
+                  <h5><i class="fa-solid fa-file-code"></i> &ensp;TAILWIND</h5>
+                  <div class="progress">
+                    <div class="progress-in" style="width: 65%;"></div>
+                    <div class="skill-percent">65%</div>
+                  </div>
+                </div>
+
+              </div>
+            </div>
+            <!-- </div> -->
+            <!-- ===== Language Content End ==== -->
+            <!-- ===== education Content Start ==== -->
             <div class="row">
               <div class="education padd-15">
                 <h3 class="title">Education</h3>
@@ -184,41 +233,27 @@
                       <div class="timeline-item">
                         <div class="circle-dot"></div>
                         <h3 class="timeline-date">
-                          <i class="fa fa-calendar"></i> 2013 - 2015
+                          <i class="fa fa-calendar"></i>2018-2020
                         </h3>
-                        <h4 class="timeline-title">Master in Computer Science</h4>
-                        <p class="timeline-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. A, maiores.
-                          Facere, minus? Quam minus autem quidem similique dignissimos cumque dolorum quis optio
-                          blanditiis, doloremque veritatis.</p>
+                        <h4 class="timeline-title">MATRIC-COMPUTER SCI</h4>
+                        <p class="timeline-text">BISE Faisalabad</p>
                       </div>
                       <!-- ===== timeline item ===== -->
                       <div class="timeline-item">
                         <div class="circle-dot"></div>
                         <h3 class="timeline-date">
-                          <i class="fa fa-calendar"></i> 2013 - 2015
+                          <i class="fa fa-calendar"></i>2020-2022
                         </h3>
-                        <h4 class="timeline-title">Master in Computer Science</h4>
-                        <p class="timeline-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. A, maiores.
-                          Facere, minus? Quam minus autem quidem similique dignissimos cumque dolorum quis optio
-                          blanditiis, doloremque veritatis.</p>
-                      </div>
-                      <!-- ===== timeline item ===== -->
-                      <div class="timeline-item">
-                        <div class="circle-dot"></div>
-                        <h3 class="timeline-date">
-                          <i class="fa fa-calendar"></i> 2013 - 2015
-                        </h3>
-                        <h4 class="timeline-title">Master in Computer Science</h4>
-                        <p class="timeline-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. A, maiores.
-                          Facere, minus? Quam minus autem quidem similique dignissimos cumque dolorum quis optio
-                          blanditiis, doloremque veritatis.</p>
+                        <h4 class="timeline-title">INTERMEDIATE-ICS </h4>
+                        <p class="timeline-text">BISE Faisalabad
+                        <p>
                       </div>
                     </div>
                   </div>
                 </div>
               </div>
-
-
+              <!-- ===== education Content End ==== -->
+              <!-- ===== Experience Content Start ==== -->
               <div class="education padd-15">
                 <h3 class="title"> Experience</h3>
                 <div class="row">
@@ -228,44 +263,33 @@
                       <div class="timeline-item">
                         <div class="circle-dot"></div>
                         <h3 class="timeline-date">
-                          <i class="fa fa-calendar"></i> 2013 - 2015
+                          <i class="fa fa-calendar"></i> 2023
                         </h3>
-                        <h4 class="timeline-title">Master in Computer Science</h4>
-                        <p class="timeline-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. A, maiores.
-                          Facere, minus? Quam minus autem quidem similique dignissimos cumque dolorum quis optio
-                          blanditiis, doloremque veritatis.</p>
+                        <h4 class="timeline-title">Computer Operator</h4>
+                        <p class="timeline-text"> 06 Month as a Computer Operator in VTI Lab Pir Mahal </p>
                       </div>
                       <!-- ===== timeline item ===== -->
                       <div class="timeline-item">
                         <div class="circle-dot"></div>
                         <h3 class="timeline-date">
-                          <i class="fa fa-calendar"></i> 2013 - 2015
+                          <i class="fa fa-calendar"></i> 2023
                         </h3>
-                        <h4 class="timeline-title">Master in Computer Science</h4>
-                        <p class="timeline-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. A, maiores.
-                          Facere, minus? Quam minus autem quidem similique dignissimos cumque dolorum quis optio
-                          blanditiis, doloremque veritatis.</p>
-                      </div>
-                      <!-- ===== timeline item ===== -->
-                      <div class="timeline-item">
-                        <div class="circle-dot"></div>
-                        <h3 class="timeline-date">
-                          <i class="fa fa-calendar"></i> 2013 - 2015
-                        </h3>
-                        <h4 class="timeline-title">Master in Computer Science</h4>
-                        <p class="timeline-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. A, maiores.
-                          Facere, minus? Quam minus autem quidem similique dignissimos cumque dolorum quis optio
-                          blanditiis, doloremque veritatis.</p>
+                        <h4 class="timeline-title">Computer Operator</h4>
+                        <p class="timeline-text">01 Year as a Computer Operator in Johar Center Pir Mahal.
+                        </p>
                       </div>
                     </div>
                   </div>
                 </div>
               </div>
+              <!-- ===== Experience Content End ==== -->
             </div>
+
           </div>
         </div>
       </div>
     </section>
+
     <!-- ===== About Section End ===== -->
 
     <!-- ===== Services Section start ==== -->
@@ -281,20 +305,9 @@
           <div class="service-item padd-15">
             <div class="service-item-inner">
               <div class="icon">
-                <i class="fa fa-mobile-alt"></i>
-              </div>
-              <h4>Web Design</h4>
-              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil velit ab itaque.</p>
-            </div>
-          </div>
-          <!-- ===== Service item End ====== -->
-          <!-- ===== Service item Start ====== -->
-          <div class="service-item padd-15">
-            <div class="service-item-inner">
-              <div class="icon">
                 <i class="fa fa-laptop-code"></i>
               </div>
-              <h4>Web Design</h4>
+              <h4> Web Development</h4>
               <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil velit ab itaque.</p>
             </div>
           </div>
@@ -305,7 +318,7 @@
               <div class="icon">
                 <i class="fa fa-palette"></i>
               </div>
-              <h4>Web Design</h4>
+              <h4>UI/UX Design</h4>
               <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil velit ab itaque.</p>
             </div>
           </div>
@@ -314,20 +327,9 @@
           <div class="service-item padd-15">
             <div class="service-item-inner">
               <div class="icon">
-                <i class="fa fa-code"></i>
+                <i class="fa-brands fa-microsoft"></i>
               </div>
-              <h4>Web Design</h4>
-              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil velit ab itaque.</p>
-            </div>
-          </div>
-          <!-- ===== Service item End ====== -->
-          <!-- ===== Service item Start ====== -->
-          <div class="service-item padd-15">
-            <div class="service-item-inner">
-              <div class="icon">
-                <i class="fa fa-search"></i>
-              </div>
-              <h4>Web Design</h4>
+              <h4>Microsoft Office</h4>
               <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil velit ab itaque.</p>
             </div>
           </div>
@@ -338,7 +340,29 @@
               <div class="icon">
                 <i class="fa fa-bullhorn"></i>
               </div>
-              <h4>Web Design</h4>
+              <h4> Digital Markting</h4>
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil velit ab itaque.</p>
+            </div>
+          </div>
+          <!-- ===== Service item End ====== -->
+          <!-- ===== Service item Start ====== -->
+          <div class="service-item padd-15">
+            <div class="service-item-inner">
+              <div class="icon">
+                <i class="fab fa-shopify"></i>
+              </div>
+              <h4> Shopify</h4>
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil velit ab itaque.</p>
+            </div>
+          </div>
+          <!-- ===== Service item End ====== -->
+          <!-- ===== Service item Start ====== -->
+          <div class="service-item padd-15">
+            <div class="service-item-inner">
+              <div class="icon">
+                <i class="fab fa-wordpress"></i>
+              </div>
+              <h4>Wordpress</h4>
               <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil velit ab itaque.</p>
             </div>
           </div>
@@ -366,7 +390,9 @@
           <div class="portfolio-item padd-15">
             <div class="portfolio-item-inner shadow-dark">
               <div class="portfolio-img">
-                <img src="images/portfolio/portfolio-1.jpg" alt="">
+                <a href="https://github.com/MuhammadDastgeer">
+                  <img src="images/portfolio/portfolio-1.jpg" alt="">
+                </a>
               </div>
             </div>
           </div>
@@ -375,7 +401,9 @@
           <div class="portfolio-item padd-15">
             <div class="portfolio-item-inner shadow-dark">
               <div class="portfolio-img">
-                <img src="images/portfolio/portfolio-2.jpg" alt="">
+                <a href="https://github.com/MuhammadDastgeer/project-airbnb">
+                  <img src="images/portfolio/portfolio-2.jpg" alt="">
+                </a>
               </div>
             </div>
           </div>
@@ -384,7 +412,9 @@
           <div class="portfolio-item padd-15">
             <div class="portfolio-item-inner shadow-dark">
               <div class="portfolio-img">
-                <img src="images/portfolio/portfolio-3.jpg" alt="">
+                <a href="https://github.com/MuhammadDastgeer/React">
+                  <img src="images/portfolio/portfolio-3.jpg" alt="">
+                </a>
               </div>
             </div>
           </div>
@@ -393,7 +423,9 @@
           <div class="portfolio-item padd-15">
             <div class="portfolio-item-inner shadow-dark">
               <div class="portfolio-img">
-                <img src="images/portfolio/portfolio-4.jpg" alt="">
+                <a href="https://github.com/MuhammadDastgeer/HTML-CSS-JS/tree/main/Res-admin-main">
+                  <img src="images/portfolio/portfolio-4.jpg" alt="">
+                </a>
               </div>
             </div>
           </div>
@@ -402,7 +434,9 @@
           <div class="portfolio-item padd-15">
             <div class="portfolio-item-inner shadow-dark">
               <div class="portfolio-img">
-                <img src="images/portfolio/portfolio-5.jpg" alt="">
+                <a href="https://github.com/MuhammadDastgeer/HTML-CSS-JS">
+                  <img src="images/portfolio/portfolio-5.jpg" alt="">
+                </a>
               </div>
             </div>
           </div>
@@ -411,7 +445,9 @@
           <div class="portfolio-item padd-15">
             <div class="portfolio-item-inner shadow-dark">
               <div class="portfolio-img">
-                <img src="images/portfolio/portfolio-6.jpg" alt="">
+                <a href="https://github.com/MuhammadDastgeer/HTML-CSS-JS/tree/main/Chips">
+                  <img src="images/portfolio/portfolio-6.jpg" alt="">
+                </a>
               </div>
             </div>
           </div>
@@ -511,8 +547,8 @@
 
   </div>
   <!-- ===== Main Content End ===== -->
-  </div>
-  <!-- ===== Main Container End ===== -->
+
+
 
   <!-- ===== Style Switcher Start ===== -->
   <div class="style-switcher">
