--- a/index.html
+++ b/index.html
@@ -66,9 +66,10 @@
 
             <div class="social_media">
               <ul>
-                <a href="https://web.facebook.com/m.dastgeer.79/"><i class="fa-brands fa-facebook"></i></a>
-                <!-- <a href="#"><i class="fa-brands fa-twitter"></i></a> -->
-                <a href="https://www.instagram.com/m.dastgeer.79/"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://www.facebook.com/m.dastgeer.79?mibextid=ZbWKwL"><i
+                    class="fa-brands fa-facebook"></i></a>
+                <a href="https://www.instagram.com/m.dastgeer.79/profilecard/?igsh=cXR5enB2OXpkdW9h"><i
+                    class="fa-brands fa-instagram"></i></a>
                 <a href="https://github.com/MuhammadDastgeer"><i class="fa-brands fa-github"></i></a>
               </ul>
             </div>
