--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                     <p>Age: <span>20</span></p>
                   </div>
                   <div class="info-item padd-15">
-                    <p>Website : <span>www.domain.com</span></p>
+                    <p>Website : <span>muhammaddastgeer.github.io/protfole/</span></p>
                   </div>
                   <div class="info-item padd-15">
                     <p>Email:<span>dastgeerjutt8888@gmail.com</span></p>
@@ -479,6 +479,13 @@
           <!-- ===== Contact info item end ====== -->
           <!-- ===== Contact info item start ====== -->
           <div class="contact-info-item">
+            <div class="icon"><i class="fa-brands fa-whatsapp"></i></div>
+            <h4>Call Us On</h4>
+            <p>+92 3182460719</p>
+          </div>
+          <!-- ===== Contact info item end ====== -->
+          <!-- ===== Contact info item start ====== -->
+          <div class="contact-info-item">
             <div class="icon"><i class="fa fa-map-marker"></i></div>
             <h4>Office</h4>
             <p>Pir Mahal</p>
@@ -489,13 +496,6 @@
             <div class="icon"><i class="fa fa-envelope"></i></div>
             <h4>Email</h4>
             <p> dastgeerjutt8888@gmail.com </p>
-          </div>
-          <!-- ===== Contact info item end ====== -->
-          <!-- ===== Contact info item start ====== -->
-          <div class="contact-info-item">
-            <div class="icon"><i class="fa fa-globe-europe"></i></div>
-            <h4>Website</h4>
-            <p>abc.com</p>
           </div>
           <!-- ===== Contact info item end ====== -->
         </div>
