--- a/index.html
+++ b/index.html
@@ -99,12 +99,11 @@
             <div class="row">
               <div class="about-text padd-15">
                 <h3>I'm Muhammad Dastgeer and <span>Web Developer</span></h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam quo ea commodi
-                  autem eius id error. Corporis inventore adipisci hic sequi! Blanditiis architecto
-                  reprehenderit rerum assumenda, illum aliquam quae dolore nobis laudantium
-                  incidunt maiores harum officiis animi commodi! Ipsam exercitationem molestias,
-                  non et velit facilis cupiditate, ducimus, dolor harum explicabo cum
-                  necessitatibus obcaecati minima dignissimos.</p>
+                <p>My Name is Muhammad Dastgeer, and I am a passionate Web Developer. I specialize in creating dynamic,
+                  user-friendly websites and web applications. With a strong foundation in front-end and back-end
+                  development, I enjoy solving complex problems through code. Constantly learning and adapting to the
+                  latest technologies, I aim to deliver innovative digital solutions. In my free time, I explore new
+                  programming trends and contribute to open-source projects.</p>
               </div>
             </div>
             <!-- ===== Information Content Start ==== -->
@@ -309,7 +308,6 @@
                 <i class="fa fa-laptop-code"></i>
               </div>
               <h4> Web Development</h4>
-              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil velit ab itaque.</p>
             </div>
           </div>
           <!-- ===== Service item End ====== -->
@@ -320,7 +318,6 @@
                 <i class="fa fa-palette"></i>
               </div>
               <h4>UI/UX Design</h4>
-              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil velit ab itaque.</p>
             </div>
           </div>
           <!-- ===== Service item End ====== -->
@@ -331,7 +328,7 @@
                 <i class="fa-brands fa-microsoft"></i>
               </div>
               <h4>Microsoft Office</h4>
-              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil velit ab itaque.</p>
+              <p></p>
             </div>
           </div>
           <!-- ===== Service item End ====== -->
@@ -342,7 +339,6 @@
                 <i class="fa fa-bullhorn"></i>
               </div>
               <h4> Digital Markting</h4>
-              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil velit ab itaque.</p>
             </div>
           </div>
           <!-- ===== Service item End ====== -->
@@ -353,7 +349,6 @@
                 <i class="fab fa-shopify"></i>
               </div>
               <h4> Shopify</h4>
-              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil velit ab itaque.</p>
             </div>
           </div>
           <!-- ===== Service item End ====== -->
@@ -364,7 +359,6 @@
                 <i class="fab fa-wordpress"></i>
               </div>
               <h4>Wordpress</h4>
-              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil velit ab itaque.</p>
             </div>
           </div>
           <!-- ===== Service item End ====== -->
