--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                   </div>
                   <div class="row">
                     <div class="buttons padd-15">
-                      <a href="#" class="btn">Download CV</a>
+                      <a href="PDF/Muhammad Dastgeer.pdf" class="btn" download>Download CV</a>
                       <a href="#contact" class="btn hire-me">Hire Me</a>
                     </div>
                   </div>
