--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <div class="container">
         <div class="row">
           <div class="home-info padd-15">
-            <h3 class="hello">Hello, my name is <span class="name">Muhammad Dastgeer </span></h3>
+            <h3 class="hello">Hello, My Name is <span class="name">Muhammad Dastgeer </span></h3>
             <h3 class="my-profession">I'm a <span class="typing">web designer</span></h3>
             <p>I'm a web Designer with extensive experience for over 3 Month. My expertise is to create and website
               design, graphic design, and many more...</p>
