--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
       <div class="nav-toggler">
         <span></span>
       </div>
-
       <ul class="nav">
         <li><a href="#home" class="active"><i class="fa fa-home"></i> Home</a></li>
         <li><a href="#about"><i class="fa fa-user"></i> About</a></li>
@@ -44,9 +43,7 @@
         <li><a href="#portfolio"><i class="fa fa-briefcase"></i> Portfolio</a></li>
         <li><a href="#contact"><i class="fa fa-comments"></i> Contact</a></li>
       </ul>
-
     </div>
-
   </div>
   <!-- ===== Aside End ===== -->
   <!-- ===== Main Container End ===== -->
@@ -62,8 +59,6 @@
             <h3 class="my-profession">I'm a <span class="typing">web designer</span></h3>
             <p>I'm a web Designer with extensive experience for over 3 Month. My expertise is to create and website
               design, graphic design, and many more...</p>
-
-
             <div class="social_media">
               <ul>
                 <a href="https://www.facebook.com/m.dastgeer.79?mibextid=ZbWKwL"><i
@@ -73,7 +68,6 @@
                 <a href="https://github.com/MuhammadDastgeer"><i class="fa-brands fa-github"></i></a>
               </ul>
             </div>
-
             <a href="#contact" class="btn hire-me">Hire Me</a>
           </div>
           <div class="home-img padd-15">
@@ -93,7 +87,6 @@
             <h2>About Me</h2>
           </div>
         </div>
-
         <div class="row">
           <div class="about-content padd-15">
             <div class="row">
@@ -106,7 +99,9 @@
                   programming trends and contribute to open-source projects.</p>
               </div>
             </div>
+
             <!-- ===== Information Content Start ==== -->
+
             <div class="row">
               <div class="personal-info padd-15">
                 <div class="row">
@@ -144,10 +139,12 @@
               </div>
               <!-- ===== Information Content End ==== -->
             </div>
-
           </div>
         </div>
     </section>
+    <!-- ===== About Content End ==== -->
+
+    <!-- ===== Language Skills Start ==== -->
     <!-- ===== Language Content Start ==== -->
     <section class="about section active" id="Skills">
       <div class="container">
@@ -156,10 +153,8 @@
             <h2>Coding Skills</h2>
           </div>
         </div>
-
         <div class="row">
           <div class="about-content padd-15">
-
             <div class="skills padd-15">
               <div class="row">
                 <div class="skill-item padd-15">
@@ -169,7 +164,6 @@
                     <div class="skill-percent">85%</div>
                   </div>
                 </div>
-
                 <div class="skill-item padd-15">
                   <h5> <i class="fa-brands fa-css3-alt"></i> &ensp;CSS</h5>
                   <div class="progress">
@@ -177,7 +171,6 @@
                     <div class="skill-percent">85%</div>
                   </div>
                 </div>
-
                 <div class="skill-item padd-15">
                   <h5><i class="fa-brands fa-js"></i> &ensp;JAVASCRIPT</h5>
                   <div class="progress">
@@ -185,7 +178,6 @@
                     <div class="skill-percent">75%</div>
                   </div>
                 </div>
-
                 <div class="skill-item padd-15">
                   <h5><i class="fa-brands fa-php"></i> &ensp;PHP</h5>
                   <div class="progress">
@@ -193,7 +185,6 @@
                     <div class="skill-percent">65%</div>
                   </div>
                 </div>
-
                 <div class="skill-item padd-15">
                   <h5><i class="fa-brands fa-python"></i> &ensp;PYTHON</h5>
                   <div class="progress">
@@ -201,7 +192,6 @@
                     <div class="skill-percent">55%</div>
                   </div>
                 </div>
-
                 <div class="skill-item padd-15">
                   <h5><i class="fa-brands fa-react"></i> &ensp;REACT</h5>
                   <div class="progress">
@@ -209,7 +199,6 @@
                     <div class="skill-percent">65%</div>
                   </div>
                 </div>
-
                 <div class="skill-item padd-15">
                   <h5><i class="fa-solid fa-file-code"></i> &ensp;TAILWIND</h5>
                   <div class="progress">
@@ -217,11 +206,10 @@
                     <div class="skill-percent">65%</div>
                   </div>
                 </div>
-
               </div>
             </div>
-            <!-- </div> -->
             <!-- ===== Language Content End ==== -->
+
             <!-- ===== education Content Start ==== -->
             <div class="row">
               <div class="education padd-15">
@@ -253,6 +241,7 @@
                 </div>
               </div>
               <!-- ===== education Content End ==== -->
+
               <!-- ===== Experience Content Start ==== -->
               <div class="education padd-15">
                 <h3 class="title"> Experience</h3>
@@ -284,13 +273,12 @@
               </div>
               <!-- ===== Experience Content End ==== -->
             </div>
-
           </div>
         </div>
       </div>
     </section>
 
-    <!-- ===== About Section End ===== -->
+    <!-- ===== Language Skills Start ==== -->
 
     <!-- ===== Services Section start ==== -->
     <section class="service section active " id="service">
@@ -480,7 +468,7 @@
           <!-- ===== Contact info item end ====== -->
           <!-- ===== Contact info item start ====== -->
           <div class="contact-info-item">
-            <div class="icon"><i class="fa fa-map-marker"></i></div>
+            <div class="icon"><i class="fa-solid fa-location-dot"></i></div>
             <h4>Office</h4>
             <p>Pir Mahal</p>
           </div>
@@ -493,6 +481,7 @@
           </div>
           <!-- ===== Contact info item end ====== -->
         </div>
+
         <br>
         <h3 class="contact-title padd-15">SEND ME AN EMAIL</h3>
         <h4 class="contact-sub-title padd-15">I'M VERY RESPOSIVE TO MESSAGES</h4>
@@ -515,7 +504,6 @@
                   </div>
                 </div>
               </div>
-
               <div class="row">
                 <div class="form-item col-12 padd-15">
                   <div class="form-group">
@@ -532,18 +520,13 @@
             </div>
           </div>
         </form>
-
       </div>
     </section>
 
     <!-- ===== Contact Section End ===== -->
     <!-- ===== Contact Section start ===== -->
-
-
   </div>
   <!-- ===== Main Content End ===== -->
-
-
 
   <!-- ===== Style Switcher Start ===== -->
   <div class="style-switcher">
