--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" href="images/das.png">
+  <link rel="icon" href="images/3096997.png">
   <title> Dastgeer </title>
   <!-- ===== css ==== -->
   <link rel="stylesheet" href="css/style.css">
