--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
                 <a href="https://www.instagram.com/m.dastgeer.79/profilecard/?igsh=cXR5enB2OXpkdW9h"><i
                     class="fa-brands fa-instagram"></i></a>
                 <a href="https://github.com/MuhammadDastgeer"><i class="fa-brands fa-github"></i></a>
+                <a href="https://www.linkedin.com/in/muhammad-dastgeer-8134712b7"><i class="fa-brands fa-linkedin"></i></a>
               </ul>
             </div>
             <a href="#contact" class="btn hire-me">Hire Me</a>
