--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
               <div class="icon">
                 <i class="fa fa-palette"></i>
               </div>
-              <h4>UI/UX Design</h4>
+              <h4>Front-End Development</h4>
             </div>
           </div>
           <!-- ===== Service item End ====== -->
