--- a/index.html
+++ b/index.html
@@ -57,8 +57,7 @@
           <div class="home-info padd-15">
             <h3 class="hello">Hello, My Name is <span class="name">Muhammad Dastgeer </span></h3>
             <h3 class="my-profession">I'm a <span class="typing">web designer</span></h3>
-            <p>I'm a web Designer with extensive experience for over 3 Month. My expertise is to create and website
-              design, graphic design, and many more...</p>
+            <p>I'm a Full Stack Developer with extensive experience for over 3 Month. My expertise is to create and websit design, graphic design, and many more...</p>
             <div class="social_media">
               <ul>
                 <a href="https://www.facebook.com/m.dastgeer.79?mibextid=ZbWKwL"><i
