--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
                 <a href="https://www.instagram.com/m.dastgeer.79/profilecard/?igsh=cXR5enB2OXpkdW9h"><i
                     class="fa-brands fa-instagram"></i></a>
                 <a href="https://github.com/MuhammadDastgeer"><i class="fa-brands fa-github"></i></a>
-                <a href="https://www.linkedin.com/in/dastgeer719"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="https://www.linkedin.com/in/muhammad-dastgeer/"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="https://www.kaggle.com/dastgeerjutt"><i class="fa-brands fa-kaggle"></i></a>
               </ul>
             </div>
             <a href="#contact" class="btn hire-me">Hire Me</a>
