--- a/index.html
+++ b/index.html
@@ -92,12 +92,11 @@
           <div class="about-content padd-15">
             <div class="row">
               <div class="about-text padd-15">
-                <h3>I'm Muhammad Dastgeer and <span>Web Developer</span></h3>
-                <p>My Name is Muhammad Dastgeer, and I am a passionate Web Developer. I specialize in creating dynamic,
-                  user-friendly websites and web applications. With a strong foundation in front-end and back-end
-                  development, I enjoy solving complex problems through code. Constantly learning and adapting to the
-                  latest technologies, I aim to deliver innovative digital solutions. In my free time, I explore new
-                  programming trends and contribute to open-source projects.</p>
+                <h3>I'm Muhammad Dastgeer and <span>AI Enthusiast</span></h3>
+                <p>My name is Muhammad Dastgeer, and I am a passionate AI & Data Science Practitioner. 
+                  I specialize in Machine Learning, Deep Learning, Natural Language Processing (NLP), Data Analytics, Generative AI, and Agentic AI.
+                  With a strong foundation in building intelligent models and solving real-world problems through data, I enjoy transforming complex challenges into smart AI-driven solutions. Constantly learning and exploring the latest advancements in artificial intelligence,
+                  I aim to deliver innovative and impactful projects. In my free time, I experiment with new AI tools, research emerging trends, and contribute to open-source AI projects.</p>
               </div>
             </div>
 
