--- a/index.html
+++ b/index.html
@@ -158,52 +158,59 @@
             <div class="skills padd-15">
               <div class="row">
                 <div class="skill-item padd-15">
-                  <h5> <i class="fa-brands fa-html5"></i> &ensp; HTML</h5>
+                  <h5>Python</h5>
                   <div class="progress">
                     <div class="progress-in" style="width: 85%;"></div>
                     <div class="skill-percent">85%</div>
                   </div>
                 </div>
                 <div class="skill-item padd-15">
-                  <h5> <i class="fa-brands fa-css3-alt"></i> &ensp;CSS</h5>
+                  <h5>Machine Learning (scikit-learn)</h5>
                   <div class="progress">
-                    <div class="progress-in" style="width: 85%;"></div>
-                    <div class="skill-percent">85%</div>
+                    <div class="progress-in" style="width: 70%;"></div>
+                    <div class="skill-percent">70%</div>
                   </div>
                 </div>
                 <div class="skill-item padd-15">
-                  <h5><i class="fa-brands fa-js"></i> &ensp;JAVASCRIPT</h5>
+                  <h5>Deep Learning (TensorFlow, Keras, PyTorch)</h5>
                   <div class="progress">
-                    <div class="progress-in" style="width: 76%;"></div>
+                    <div class="progress-in" style="width: 70%;"></div>
+                    <div class="skill-percent">70%</div>
+                  </div>
+                </div>
+                <div class="skill-item padd-15">
+                  <h5>Natural Language Processing (Hugging Face Transformers,NLTK)</h5>
+                  <div class="progress">
+                    <div class="progress-in" style="width: 65%;"></div>
+                    <div class="skill-percent">65%</div>
+                  </div>
+                </div>
+                <div class="skill-item padd-15">
+                  <h5>Data Analytics (Pandas, NumPy, Excel)</h5>
+                  <div class="progress">
+                    <div class="progress-in" style="width: 75%;"></div>
                     <div class="skill-percent">75%</div>
                   </div>
                 </div>
                 <div class="skill-item padd-15">
-                  <h5><i class="fa-brands fa-php"></i> &ensp;PHP</h5>
+                  <h5>Generative AI(OpenAI API, Hugging Face)</h5>
                   <div class="progress">
-                    <div class="progress-in" style="width: 65%;"></div>
-                    <div class="skill-percent">65%</div>
+                    <div class="progress-in" style="width: 70%;"></div>
+                    <div class="skill-percent">70%</div>
                   </div>
                 </div>
                 <div class="skill-item padd-15">
-                  <h5><i class="fa-brands fa-python"></i> &ensp;PYTHON</h5>
+                  <h5>Data Visualization (Matplotlib, Seaborn, Plotly)</h5>
                   <div class="progress">
-                    <div class="progress-in" style="width: 55%;"></div>
-                    <div class="skill-percent">55%</div>
+                    <div class="progress-in" style="width: 75%;"></div>
+                    <div class="skill-percent">75%</div>
                   </div>
                 </div>
                 <div class="skill-item padd-15">
-                  <h5><i class="fa-brands fa-react"></i> &ensp;REACT</h5>
+                  <h5>Agentic AI (langchain, langgraph, langsmith)</h5>
                   <div class="progress">
-                    <div class="progress-in" style="width: 65%;"></div>
-                    <div class="skill-percent">65%</div>
-                  </div>
-                </div>
-                <div class="skill-item padd-15">
-                  <h5><i class="fa-solid fa-file-code"></i> &ensp;TAILWIND</h5>
-                  <div class="progress">
-                    <div class="progress-in" style="width: 65%;"></div>
-                    <div class="skill-percent">65%</div>
+                    <div class="progress-in" style="width: 70%;"></div>
+                    <div class="skill-percent">70%</div>
                   </div>
                 </div>
               </div>
