--- a/index.html
+++ b/index.html
@@ -300,9 +300,9 @@
           <div class="service-item padd-15">
             <div class="service-item-inner">
               <div class="icon">
-                <i class="fa fa-laptop-code"></i>
+                <i class="fa-solid fa-brain"></i>
               </div>
-              <h4> Web Development</h4>
+              <h4> Machine Learning Solutions </h4>
             </div>
           </div>
           <!-- ===== Service item End ====== -->
@@ -310,9 +310,9 @@
           <div class="service-item padd-15">
             <div class="service-item-inner">
               <div class="icon">
-                <i class="fa fa-palette"></i>
+                <i class="fa-solid fa-network-wired"></i>
               </div>
-              <h4>Front-End Development</h4>
+              <h4>Deep Learning Model Development</h4>
             </div>
           </div>
           <!-- ===== Service item End ====== -->
@@ -320,9 +320,9 @@
           <div class="service-item padd-15">
             <div class="service-item-inner">
               <div class="icon">
-                <i class="fa-brands fa-microsoft"></i>
+                <i class="fa-solid fa-language"></i>
               </div>
-              <h4>Microsoft Office</h4>
+              <h4>Natural Language Processing (NLP) Applications</h4>
               <p></p>
             </div>
           </div>
@@ -331,9 +331,9 @@
           <div class="service-item padd-15">
             <div class="service-item-inner">
               <div class="icon">
-                <i class="fa fa-bullhorn"></i>
+                <i class="fa-solid fa-chart-line"></i>
               </div>
-              <h4> Digital Markting</h4>
+              <h4> Data Analysis & Visualization</h4>
             </div>
           </div>
           <!-- ===== Service item End ====== -->
@@ -341,9 +341,9 @@
           <div class="service-item padd-15">
             <div class="service-item-inner">
               <div class="icon">
-                <i class="fab fa-shopify"></i>
+                <i class="fa-solid fa-magic"></i>
               </div>
-              <h4> Shopify</h4>
+              <h4> Generative AI Solutions</h4>
             </div>
           </div>
           <!-- ===== Service item End ====== -->
@@ -351,9 +351,29 @@
           <div class="service-item padd-15">
             <div class="service-item-inner">
               <div class="icon">
-                <i class="fab fa-wordpress"></i>
+                <i class="fa-solid fa-robot"></i>
               </div>
-              <h4>Wordpress</h4>
+              <h4>Agentic AI Development</h4>
+            </div>
+          </div>
+          <!-- ===== Service item End ====== -->
+         <!-- ===== Service item Start ====== -->
+          <div class="service-item padd-15">
+            <div class="service-item-inner">
+              <div class="icon">
+                <i class="fa-solid fa-comments"></i>
+              </div>
+              <h4>Chatbot Development</h4>
+            </div>
+          </div>
+          <!-- ===== Service item End ====== -->
+         <!-- ===== Service item Start ====== -->
+          <div class="service-item padd-15">
+            <div class="service-item-inner">
+              <div class="icon">
+                <i class="fa-solid fa-bolt"></i>
+              </div>
+              <h4>AI-Powered Automation</h4>
             </div>
           </div>
           <!-- ===== Service item End ====== -->
