--- a/index.html
+++ b/index.html
@@ -377,6 +377,16 @@
             </div>
           </div>
           <!-- ===== Service item End ====== -->
+          <!-- ===== Service item Start ====== -->
+          <div class="service-item padd-15">
+            <div class="service-item-inner">
+              <div class="icon">
+                <i class="fa-solid fa-layer-group"></i>
+              </div>
+              <h4>Multimodal AI Integration</h4>
+            </div>
+          </div>
+          <!-- ===== Service item End ====== -->
         </div>
       </div>
     </section>
